# swagger.yaml
@@ -3,21 +3,30 @@ info:
   title: Books API
   version: 1.0.0
 servers:
-  - url: http://127.0.0.1:8000/
+  - url: https://monoapi-87eea2a4128e.herokuapp.com/
 paths:
   /books/:
+    parameters:
+      - in: query
+        name: search
+        schema:
+          type: string
+      - in: query
+        name: filters
+        schema:
+          type: string
+
     get:
-      summary: Method for get list of books
-      tags:
-        - Books
-      operationId: getallbooks
       responses:
-        "200":
-          description: Successful list of books
+        200:
+          description: Successful created book
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Books"
+
+
+
 
     post:
       summary: Method for add new book
@@ -58,10 +67,6 @@ paths:
                 value:
                   order:
                     [{"book_id":5, "quantity": 3}]
-              "Buy 5 books, two with 4 id and rest of books with 12 id":
-                value:
-                  order:
-                    [{"book_id":5, "quantity": 3},{"book_id":10, "quantity": 5}]
 
       responses:
         "200":
@@ -103,6 +108,8 @@ components:
         price:
           type: integer
           example: 1000
+
+
     BookCreated:
       type: object
       required:
